--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Blank HTML5</title>
         <script type="text/javascript" src="https://form.datumforms.com/assets/js/builder2.js"></script>
-        <link type="text/css" href="https://mtandoh.github.io/simpleFormBuilder/builder.css" rel="stylesheet">
+        <link type="text/css" href="https://form.datumforms.com/assets/css/builder.css" rel="stylesheet">
 
        
 <script>
