--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             imageAsset();
         },
     },
-        initialFormData: [{"type":"table","label":"","name":"v9702688460857","demographic":"","rows":[{"name":"generic 1"},{"name":"opt 2"}],"columns":[{"name":"generic 1","value":"generic 1"},{"name":"opt 2"},{"name":"opt 3"},{"name":"opt 4"}],"tableType":"","class":"sfb-panel sfb-panel-default sfb-main-form ","defaultValue":"","choices":[],"placeholder":"","value":"","readonly":"","min":"","max":"","required":"","condOption":"","condValue":"","scorable":"","product":"","price":""}],
+        initialFormData: [{"type":"table","label":"","name":"v9702688460857","demographic":"","rows":[{"name":"generic 1"},{"name":"opt 2"}],"columns":[{"name":"generic 1","value":"generic 1"},{"name":"opt 2"},{"name":"opt 3"},{"name":"opt 4"}],"tableType":"Text Area","class":"sfb-panel sfb-panel-default sfb-main-form ","defaultValue":"","choices":[],"placeholder":"","value":"","readonly":"","min":"","max":"","required":"","condOption":"","condValue":"","scorable":"","product":"","price":""}],
         mode: 1
         
 };
